--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
 
 header {
     background-color: var(--colour03);
+    padding: 0px 0px 20px 0px;
     padding: 20px;
     text-align: center;
 }
