--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 :root {
-    --colour01: #EFF1F3;
+    --colour01: #;
     --colour02: #696773;
     --colour03: #009FB7;
     --colour04: #FED766;
