--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ tfoot {
     font-weight: bold;
 }
 
-.add {
+.btc {
     background-color: black;
     color: var(--colour01);
     padding: 7px;
